// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForecastList should match snapshot 1`] = `
<ForecastList__ForecastListContainer>
  <tbody>
    <ForecastList__ForecastRow>
      <th>
        City
      </th>
      <th
        key="1013.27-1556388000-7.44-1013.27"
      >
        21:00
      </th>
      <th
        key="1015.38-1556398800-6.77-1015.38"
      >
        00:00
      </th>
      <th
        key="1015.87-1556409600-7.09-1015.87"
      >
        03:00
      </th>
      <th
        key="1016.03-1556420400-7.26-1016.03"
      >
        06:00
      </th>
      <th
        key="1017.19-1556431200-6.86-1017.19"
      >
        09:00
      </th>
      <th
        key="1018.77-1556442000-6.3-1018.77"
      >
        12:00
      </th>
      <th
        key="1019.32-1556452800-6.01-1019.32"
      >
        15:00
      </th>
      <th
        key="1019.55-1556463600-4.91-1019.55"
      >
        18:00
      </th>
    </ForecastList__ForecastRow>
    <ForecastList__ForecastRow
      key="London-0"
    >
      <ForecastItem
        data={
          Object {
            "displayName": "London",
            "list": Array [
              Object {
                "clouds": Object {
                  "all": 70,
                },
                "dt": 1556388000,
                "dt_txt": "2019-04-27 18:00:00",
                "main": Object {
                  "grnd_level": 1008.68,
                  "humidity": 54,
                  "pressure": 1013.27,
                  "sea_level": 1013.27,
                  "temp": 10.47,
                  "temp_kf": -0.18,
                  "temp_max": 10.65,
                  "temp_min": 10.47,
                },
                "rain": Object {
                  "3h": 0.125,
                },
                "sys": Object {
                  "pod": "d",
                },
                "weather": Array [
                  Object {
                    "description": "light rain",
                    "icon": "10d",
                    "id": 500,
                    "main": "Rain",
                  },
                ],
                "wind": Object {
                  "deg": 283.11,
                  "speed": 7.44,
                },
              },
              Object {
                "clouds": Object {
                  "all": 15,
                },
                "dt": 1556398800,
                "dt_txt": "2019-04-27 21:00:00",
                "main": Object {
                  "grnd_level": 1010.79,
                  "humidity": 61,
                  "pressure": 1015.38,
                  "sea_level": 1015.38,
                  "temp": 8.22,
                  "temp_kf": -0.13,
                  "temp_max": 8.35,
                  "temp_min": 8.22,
                },
                "sys": Object {
                  "pod": "n",
                },
                "weather": Array [
                  Object {
                    "description": "few clouds",
                    "icon": "02n",
                    "id": 801,
                    "main": "Clouds",
                  },
                ],
                "wind": Object {
                  "deg": 275.721,
                  "speed": 6.77,
                },
              },
              Object {
                "clouds": Object {
                  "all": 34,
                },
                "dt": 1556409600,
                "dt_txt": "2019-04-28 00:00:00",
                "main": Object {
                  "grnd_level": 1011.44,
                  "humidity": 61,
                  "pressure": 1015.87,
                  "sea_level": 1015.87,
                  "temp": 7.34,
                  "temp_kf": -0.09,
                  "temp_max": 7.43,
                  "temp_min": 7.34,
                },
                "sys": Object {
                  "pod": "n",
                },
                "weather": Array [
                  Object {
                    "description": "scattered clouds",
                    "icon": "03n",
                    "id": 802,
                    "main": "Clouds",
                  },
                ],
                "wind": Object {
                  "deg": 280.565,
                  "speed": 7.09,
                },
              },
              Object {
                "clouds": Object {
                  "all": 62,
                },
                "dt": 1556420400,
                "dt_txt": "2019-04-28 03:00:00",
                "main": Object {
                  "grnd_level": 1011.49,
                  "humidity": 70,
                  "pressure": 1016.03,
                  "sea_level": 1016.03,
                  "temp": 6.93,
                  "temp_kf": -0.04,
                  "temp_max": 6.98,
                  "temp_min": 6.93,
                },
                "rain": Object {
                  "3h": 0.375,
                },
                "sys": Object {
                  "pod": "n",
                },
                "weather": Array [
                  Object {
                    "description": "light rain",
                    "icon": "10n",
                    "id": 500,
                    "main": "Rain",
                  },
                ],
                "wind": Object {
                  "deg": 287.505,
                  "speed": 7.26,
                },
              },
              Object {
                "clouds": Object {
                  "all": 76,
                },
                "dt": 1556431200,
                "dt_txt": "2019-04-28 06:00:00",
                "main": Object {
                  "grnd_level": 1012.52,
                  "humidity": 75,
                  "pressure": 1017.19,
                  "sea_level": 1017.19,
                  "temp": 7.33,
                  "temp_kf": 0,
                  "temp_max": 7.33,
                  "temp_min": 7.33,
                },
                "rain": Object {
                  "3h": 0.187,
                },
                "sys": Object {
                  "pod": "d",
                },
                "weather": Array [
                  Object {
                    "description": "light rain",
                    "icon": "10d",
                    "id": 500,
                    "main": "Rain",
                  },
                ],
                "wind": Object {
                  "deg": 299.594,
                  "speed": 6.86,
                },
              },
              Object {
                "clouds": Object {
                  "all": 66,
                },
                "dt": 1556442000,
                "dt_txt": "2019-04-28 09:00:00",
                "main": Object {
                  "grnd_level": 1013.93,
                  "humidity": 69,
                  "pressure": 1018.77,
                  "sea_level": 1018.77,
                  "temp": 10.19,
                  "temp_kf": 0,
                  "temp_max": 10.19,
                  "temp_min": 10.19,
                },
                "sys": Object {
                  "pod": "d",
                },
                "weather": Array [
                  Object {
                    "description": "broken clouds",
                    "icon": "04d",
                    "id": 803,
                    "main": "Clouds",
                  },
                ],
                "wind": Object {
                  "deg": 312.898,
                  "speed": 6.3,
                },
              },
              Object {
                "clouds": Object {
                  "all": 82,
                },
                "dt": 1556452800,
                "dt_txt": "2019-04-28 12:00:00",
                "main": Object {
                  "grnd_level": 1014.62,
                  "humidity": 63,
                  "pressure": 1019.32,
                  "sea_level": 1019.32,
                  "temp": 11.99,
                  "temp_kf": 0,
                  "temp_max": 11.99,
                  "temp_min": 11.99,
                },
                "rain": Object {
                  "3h": 0.312,
                },
                "sys": Object {
                  "pod": "d",
                },
                "weather": Array [
                  Object {
                    "description": "light rain",
                    "icon": "10d",
                    "id": 500,
                    "main": "Rain",
                  },
                ],
                "wind": Object {
                  "deg": 319.666,
                  "speed": 6.01,
                },
              },
              Object {
                "clouds": Object {
                  "all": 87,
                },
                "dt": 1556463600,
                "dt_txt": "2019-04-28 15:00:00",
                "main": Object {
                  "grnd_level": 1014.93,
                  "humidity": 59,
                  "pressure": 1019.55,
                  "sea_level": 1019.55,
                  "temp": 13.04,
                  "temp_kf": 0,
                  "temp_max": 13.04,
                  "temp_min": 13.04,
                },
                "rain": Object {
                  "3h": 0.312,
                },
                "sys": Object {
                  "pod": "d",
                },
                "weather": Array [
                  Object {
                    "description": "light rain",
                    "icon": "10d",
                    "id": 500,
                    "main": "Rain",
                  },
                ],
                "wind": Object {
                  "deg": 335.292,
                  "speed": 4.91,
                },
              },
            ],
          }
        }
      />
    </ForecastList__ForecastRow>
    <ForecastList__ForecastRow
      key="Madrid-1"
    >
      <ForecastItem
        data={
          Object {
            "displayName": "Madrid",
            "list": Array [
              Object {
                "clouds": Object {
                  "all": 0,
                },
                "dt": 1556388000,
                "dt_txt": "2019-04-27 18:00:00",
                "main": Object {
                  "grnd_level": 937.7,
                  "humidity": 31,
                  "pressure": 1022.44,
                  "sea_level": 1022.44,
                  "temp": 20.17,
                  "temp_kf": -0.28,
                  "temp_max": 20.45,
                  "temp_min": 20.17,
                },
                "sys": Object {
                  "pod": "d",
                },
                "weather": Array [
                  Object {
                    "description": "clear sky",
                    "icon": "01d",
                    "id": 800,
                    "main": "Clear",
                  },
                ],
                "wind": Object {
                  "deg": 162.856,
                  "speed": 1.62,
                },
              },
              Object {
                "clouds": Object {
                  "all": 0,
                },
                "dt": 1556398800,
                "dt_txt": "2019-04-27 21:00:00",
                "main": Object {
                  "grnd_level": 939.05,
                  "humidity": 45,
                  "pressure": 1024.47,
                  "sea_level": 1024.47,
                  "temp": 15.44,
                  "temp_kf": -0.21,
                  "temp_max": 15.65,
                  "temp_min": 15.44,
                },
                "sys": Object {
                  "pod": "n",
                },
                "weather": Array [
                  Object {
                    "description": "clear sky",
                    "icon": "01n",
                    "id": 800,
                    "main": "Clear",
                  },
                ],
                "wind": Object {
                  "deg": 319.481,
                  "speed": 1.06,
                },
              },
              Object {
                "clouds": Object {
                  "all": 0,
                },
                "dt": 1556409600,
                "dt_txt": "2019-04-28 00:00:00",
                "main": Object {
                  "grnd_level": 939.1,
                  "humidity": 56,
                  "pressure": 1024.74,
                  "sea_level": 1024.74,
                  "temp": 13.95,
                  "temp_kf": -0.14,
                  "temp_max": 14.09,
                  "temp_min": 13.95,
                },
                "sys": Object {
                  "pod": "n",
                },
                "weather": Array [
                  Object {
                    "description": "clear sky",
                    "icon": "01n",
                    "id": 800,
                    "main": "Clear",
                  },
                ],
                "wind": Object {
                  "deg": 31.129,
                  "speed": 2.98,
                },
              },
              Object {
                "clouds": Object {
                  "all": 19,
                },
                "dt": 1556420400,
                "dt_txt": "2019-04-28 03:00:00",
                "main": Object {
                  "grnd_level": 938,
                  "humidity": 65,
                  "pressure": 1023.97,
                  "sea_level": 1023.97,
                  "temp": 12.41,
                  "temp_kf": -0.07,
                  "temp_max": 12.48,
                  "temp_min": 12.41,
                },
                "sys": Object {
                  "pod": "n",
                },
                "weather": Array [
                  Object {
                    "description": "few clouds",
                    "icon": "02n",
                    "id": 801,
                    "main": "Clouds",
                  },
                ],
                "wind": Object {
                  "deg": 32.563,
                  "speed": 2.74,
                },
              },
              Object {
                "clouds": Object {
                  "all": 10,
                },
                "dt": 1556431200,
                "dt_txt": "2019-04-28 06:00:00",
                "main": Object {
                  "grnd_level": 937.61,
                  "humidity": 64,
                  "pressure": 1023.83,
                  "sea_level": 1023.83,
                  "temp": 12.03,
                  "temp_kf": 0,
                  "temp_max": 12.03,
                  "temp_min": 12.03,
                },
                "sys": Object {
                  "pod": "d",
                },
                "weather": Array [
                  Object {
                    "description": "clear sky",
                    "icon": "01d",
                    "id": 800,
                    "main": "Clear",
                  },
                ],
                "wind": Object {
                  "deg": 38.885,
                  "speed": 2.58,
                },
              },
              Object {
                "clouds": Object {
                  "all": 2,
                },
                "dt": 1556442000,
                "dt_txt": "2019-04-28 09:00:00",
                "main": Object {
                  "grnd_level": 937.66,
                  "humidity": 47,
                  "pressure": 1022.6,
                  "sea_level": 1022.6,
                  "temp": 17.09,
                  "temp_kf": 0,
                  "temp_max": 17.09,
                  "temp_min": 17.09,
                },
                "sys": Object {
                  "pod": "d",
                },
                "weather": Array [
                  Object {
                    "description": "clear sky",
                    "icon": "01d",
                    "id": 800,
                    "main": "Clear",
                  },
                ],
                "wind": Object {
                  "deg": 79.555,
                  "speed": 2.82,
                },
              },
              Object {
                "clouds": Object {
                  "all": 4,
                },
                "dt": 1556452800,
                "dt_txt": "2019-04-28 12:00:00",
                "main": Object {
                  "grnd_level": 936.28,
                  "humidity": 34,
                  "pressure": 1020.42,
                  "sea_level": 1020.42,
                  "temp": 21.39,
                  "temp_kf": 0,
                  "temp_max": 21.39,
                  "temp_min": 21.39,
                },
                "sys": Object {
                  "pod": "d",
                },
                "weather": Array [
                  Object {
                    "description": "clear sky",
                    "icon": "01d",
                    "id": 800,
                    "main": "Clear",
                  },
                ],
                "wind": Object {
                  "deg": 104.116,
                  "speed": 2.1,
                },
              },
              Object {
                "clouds": Object {
                  "all": 17,
                },
                "dt": 1556463600,
                "dt_txt": "2019-04-28 15:00:00",
                "main": Object {
                  "grnd_level": 934.14,
                  "humidity": 28,
                  "pressure": 1017.9,
                  "sea_level": 1017.9,
                  "temp": 23.54,
                  "temp_kf": 0,
                  "temp_max": 23.54,
                  "temp_min": 23.54,
                },
                "sys": Object {
                  "pod": "d",
                },
                "weather": Array [
                  Object {
                    "description": "few clouds",
                    "icon": "02d",
                    "id": 801,
                    "main": "Clouds",
                  },
                ],
                "wind": Object {
                  "deg": 118.017,
                  "speed": 1.7,
                },
              },
            ],
          }
        }
      />
    </ForecastList__ForecastRow>
    <ForecastList__ForecastRow
      key="New York-2"
    >
      <ForecastItem
        data={
          Object {
            "displayName": "New York",
            "list": Array [
              Object {
                "clouds": Object {
                  "all": 42,
                },
                "dt": 1556388000,
                "dt_txt": "2019-04-27 18:00:00",
                "main": Object {
                  "grnd_level": 996.49,
                  "humidity": 32,
                  "pressure": 1003.42,
                  "sea_level": 1003.42,
                  "temp": 14.39,
                  "temp_kf": 1.54,
                  "temp_max": 14.39,
                  "temp_min": 12.85,
                },
                "sys": Object {
                  "pod": "d",
                },
                "weather": Array [
                  Object {
                    "description": "scattered clouds",
                    "icon": "03d",
                    "id": 802,
                    "main": "Clouds",
                  },
                ],
                "wind": Object {
                  "deg": 279.557,
                  "speed": 7.75,
                },
              },
              Object {
                "clouds": Object {
                  "all": 85,
                },
                "dt": 1556398800,
                "dt_txt": "2019-04-27 21:00:00",
                "main": Object {
                  "grnd_level": 998.5,
                  "humidity": 37,
                  "pressure": 1005.41,
                  "sea_level": 1005.41,
                  "temp": 14.21,
                  "temp_kf": 1.16,
                  "temp_max": 14.21,
                  "temp_min": 13.05,
                },
                "sys": Object {
                  "pod": "d",
                },
                "weather": Array [
                  Object {
                    "description": "overcast clouds",
                    "icon": "04d",
                    "id": 804,
                    "main": "Clouds",
                  },
                ],
                "wind": Object {
                  "deg": 291.28,
                  "speed": 6.35,
                },
              },
              Object {
                "clouds": Object {
                  "all": 72,
                },
                "dt": 1556409600,
                "dt_txt": "2019-04-28 00:00:00",
                "main": Object {
                  "grnd_level": 1001.79,
                  "humidity": 45,
                  "pressure": 1008.7,
                  "sea_level": 1008.7,
                  "temp": 12.53,
                  "temp_kf": 0.77,
                  "temp_max": 12.53,
                  "temp_min": 11.75,
                },
                "sys": Object {
                  "pod": "n",
                },
                "weather": Array [
                  Object {
                    "description": "broken clouds",
                    "icon": "04n",
                    "id": 803,
                    "main": "Clouds",
                  },
                ],
                "wind": Object {
                  "deg": 305.27,
                  "speed": 5.23,
                },
              },
              Object {
                "clouds": Object {
                  "all": 39,
                },
                "dt": 1556420400,
                "dt_txt": "2019-04-28 03:00:00",
                "main": Object {
                  "grnd_level": 1005.36,
                  "humidity": 51,
                  "pressure": 1012,
                  "sea_level": 1012,
                  "temp": 10.06,
                  "temp_kf": 0.39,
                  "temp_max": 10.06,
                  "temp_min": 9.68,
                },
                "sys": Object {
                  "pod": "n",
                },
                "weather": Array [
                  Object {
                    "description": "scattered clouds",
                    "icon": "03n",
                    "id": 802,
                    "main": "Clouds",
                  },
                ],
                "wind": Object {
                  "deg": 309.686,
                  "speed": 4.3,
                },
              },
              Object {
                "clouds": Object {
                  "all": 64,
                },
                "dt": 1556431200,
                "dt_txt": "2019-04-28 06:00:00",
                "main": Object {
                  "grnd_level": 1006.38,
                  "humidity": 54,
                  "pressure": 1013.28,
                  "sea_level": 1013.28,
                  "temp": 8.33,
                  "temp_kf": 0,
                  "temp_max": 8.33,
                  "temp_min": 8.33,
                },
                "sys": Object {
                  "pod": "n",
                },
                "weather": Array [
                  Object {
                    "description": "broken clouds",
                    "icon": "04n",
                    "id": 803,
                    "main": "Clouds",
                  },
                ],
                "wind": Object {
                  "deg": 300.309,
                  "speed": 3.71,
                },
              },
              Object {
                "clouds": Object {
                  "all": 99,
                },
                "dt": 1556442000,
                "dt_txt": "2019-04-28 09:00:00",
                "main": Object {
                  "grnd_level": 1005.82,
                  "humidity": 53,
                  "pressure": 1013.09,
                  "sea_level": 1013.09,
                  "temp": 7.99,
                  "temp_kf": 0,
                  "temp_max": 7.99,
                  "temp_min": 7.99,
                },
                "sys": Object {
                  "pod": "n",
                },
                "weather": Array [
                  Object {
                    "description": "overcast clouds",
                    "icon": "04n",
                    "id": 804,
                    "main": "Clouds",
                  },
                ],
                "wind": Object {
                  "deg": 304.504,
                  "speed": 1.31,
                },
              },
              Object {
                "clouds": Object {
                  "all": 83,
                },
                "dt": 1556452800,
                "dt_txt": "2019-04-28 12:00:00",
                "main": Object {
                  "grnd_level": 1006.59,
                  "humidity": 56,
                  "pressure": 1013.23,
                  "sea_level": 1013.23,
                  "temp": 8.19,
                  "temp_kf": 0,
                  "temp_max": 8.19,
                  "temp_min": 8.19,
                },
                "rain": Object {
                  "3h": 0.562,
                },
                "sys": Object {
                  "pod": "d",
                },
                "weather": Array [
                  Object {
                    "description": "light rain",
                    "icon": "10d",
                    "id": 500,
                    "main": "Rain",
                  },
                ],
                "wind": Object {
                  "deg": 348.919,
                  "speed": 1.92,
                },
              },
              Object {
                "clouds": Object {
                  "all": 100,
                },
                "dt": 1556463600,
                "dt_txt": "2019-04-28 15:00:00",
                "main": Object {
                  "grnd_level": 1005.57,
                  "humidity": 67,
                  "pressure": 1013.11,
                  "sea_level": 1013.11,
                  "temp": 7.34,
                  "temp_kf": 0,
                  "temp_max": 7.34,
                  "temp_min": 7.34,
                },
                "rain": Object {
                  "3h": 1.688,
                },
                "sys": Object {
                  "pod": "d",
                },
                "weather": Array [
                  Object {
                    "description": "light rain",
                    "icon": "10d",
                    "id": 500,
                    "main": "Rain",
                  },
                ],
                "wind": Object {
                  "deg": 75.964,
                  "speed": 2.57,
                },
              },
            ],
          }
        }
      />
    </ForecastList__ForecastRow>
  </tbody>
</ForecastList__ForecastListContainer>
`;

exports[`ForecastList should render an empty row skeleton while loading 1`] = `
<ForecastList__ForecastListContainer>
  <tbody>
    <ForecastList__ForecastRow>
      <th>
        City
      </th>
      <th
        key="1013.27-1556388000-7.44-1013.27"
      >
        21:00
      </th>
      <th
        key="1015.38-1556398800-6.77-1015.38"
      >
        00:00
      </th>
      <th
        key="1015.87-1556409600-7.09-1015.87"
      >
        03:00
      </th>
      <th
        key="1016.03-1556420400-7.26-1016.03"
      >
        06:00
      </th>
      <th
        key="1017.19-1556431200-6.86-1017.19"
      >
        09:00
      </th>
      <th
        key="1018.77-1556442000-6.3-1018.77"
      >
        12:00
      </th>
      <th
        key="1019.32-1556452800-6.01-1019.32"
      >
        15:00
      </th>
      <th
        key="1019.55-1556463600-4.91-1019.55"
      >
        18:00
      </th>
    </ForecastList__ForecastRow>
    <ForecastList__ForecastRow
      key="London-0"
    >
      <ForecastItem
        data={
          Object {
            "displayName": "London",
            "list": Array [
              Object {
                "clouds": Object {
                  "all": 70,
                },
                "dt": 1556388000,
                "dt_txt": "2019-04-27 18:00:00",
                "main": Object {
                  "grnd_level": 1008.68,
                  "humidity": 54,
                  "pressure": 1013.27,
                  "sea_level": 1013.27,
                  "temp": 10.47,
                  "temp_kf": -0.18,
                  "temp_max": 10.65,
                  "temp_min": 10.47,
                },
                "rain": Object {
                  "3h": 0.125,
                },
                "sys": Object {
                  "pod": "d",
                },
                "weather": Array [
                  Object {
                    "description": "light rain",
                    "icon": "10d",
                    "id": 500,
                    "main": "Rain",
                  },
                ],
                "wind": Object {
                  "deg": 283.11,
                  "speed": 7.44,
                },
              },
              Object {
                "clouds": Object {
                  "all": 15,
                },
                "dt": 1556398800,
                "dt_txt": "2019-04-27 21:00:00",
                "main": Object {
                  "grnd_level": 1010.79,
                  "humidity": 61,
                  "pressure": 1015.38,
                  "sea_level": 1015.38,
                  "temp": 8.22,
                  "temp_kf": -0.13,
                  "temp_max": 8.35,
                  "temp_min": 8.22,
                },
                "sys": Object {
                  "pod": "n",
                },
                "weather": Array [
                  Object {
                    "description": "few clouds",
                    "icon": "02n",
                    "id": 801,
                    "main": "Clouds",
                  },
                ],
                "wind": Object {
                  "deg": 275.721,
                  "speed": 6.77,
                },
              },
              Object {
                "clouds": Object {
                  "all": 34,
                },
                "dt": 1556409600,
                "dt_txt": "2019-04-28 00:00:00",
                "main": Object {
                  "grnd_level": 1011.44,
                  "humidity": 61,
                  "pressure": 1015.87,
                  "sea_level": 1015.87,
                  "temp": 7.34,
                  "temp_kf": -0.09,
                  "temp_max": 7.43,
                  "temp_min": 7.34,
                },
                "sys": Object {
                  "pod": "n",
                },
                "weather": Array [
                  Object {
                    "description": "scattered clouds",
                    "icon": "03n",
                    "id": 802,
                    "main": "Clouds",
                  },
                ],
                "wind": Object {
                  "deg": 280.565,
                  "speed": 7.09,
                },
              },
              Object {
                "clouds": Object {
                  "all": 62,
                },
                "dt": 1556420400,
                "dt_txt": "2019-04-28 03:00:00",
                "main": Object {
                  "grnd_level": 1011.49,
                  "humidity": 70,
                  "pressure": 1016.03,
                  "sea_level": 1016.03,
                  "temp": 6.93,
                  "temp_kf": -0.04,
                  "temp_max": 6.98,
                  "temp_min": 6.93,
                },
                "rain": Object {
                  "3h": 0.375,
                },
                "sys": Object {
                  "pod": "n",
                },
                "weather": Array [
                  Object {
                    "description": "light rain",
                    "icon": "10n",
                    "id": 500,
                    "main": "Rain",
                  },
                ],
                "wind": Object {
                  "deg": 287.505,
                  "speed": 7.26,
                },
              },
              Object {
                "clouds": Object {
                  "all": 76,
                },
                "dt": 1556431200,
                "dt_txt": "2019-04-28 06:00:00",
                "main": Object {
                  "grnd_level": 1012.52,
                  "humidity": 75,
                  "pressure": 1017.19,
                  "sea_level": 1017.19,
                  "temp": 7.33,
                  "temp_kf": 0,
                  "temp_max": 7.33,
                  "temp_min": 7.33,
                },
                "rain": Object {
                  "3h": 0.187,
                },
                "sys": Object {
                  "pod": "d",
                },
                "weather": Array [
                  Object {
                    "description": "light rain",
                    "icon": "10d",
                    "id": 500,
                    "main": "Rain",
                  },
                ],
                "wind": Object {
                  "deg": 299.594,
                  "speed": 6.86,
                },
              },
              Object {
                "clouds": Object {
                  "all": 66,
                },
                "dt": 1556442000,
                "dt_txt": "2019-04-28 09:00:00",
                "main": Object {
                  "grnd_level": 1013.93,
                  "humidity": 69,
                  "pressure": 1018.77,
                  "sea_level": 1018.77,
                  "temp": 10.19,
                  "temp_kf": 0,
                  "temp_max": 10.19,
                  "temp_min": 10.19,
                },
                "sys": Object {
                  "pod": "d",
                },
                "weather": Array [
                  Object {
                    "description": "broken clouds",
                    "icon": "04d",
                    "id": 803,
                    "main": "Clouds",
                  },
                ],
                "wind": Object {
                  "deg": 312.898,
                  "speed": 6.3,
                },
              },
              Object {
                "clouds": Object {
                  "all": 82,
                },
                "dt": 1556452800,
                "dt_txt": "2019-04-28 12:00:00",
                "main": Object {
                  "grnd_level": 1014.62,
                  "humidity": 63,
                  "pressure": 1019.32,
                  "sea_level": 1019.32,
                  "temp": 11.99,
                  "temp_kf": 0,
                  "temp_max": 11.99,
                  "temp_min": 11.99,
                },
                "rain": Object {
                  "3h": 0.312,
                },
                "sys": Object {
                  "pod": "d",
                },
                "weather": Array [
                  Object {
                    "description": "light rain",
                    "icon": "10d",
                    "id": 500,
                    "main": "Rain",
                  },
                ],
                "wind": Object {
                  "deg": 319.666,
                  "speed": 6.01,
                },
              },
              Object {
                "clouds": Object {
                  "all": 87,
                },
                "dt": 1556463600,
                "dt_txt": "2019-04-28 15:00:00",
                "main": Object {
                  "grnd_level": 1014.93,
                  "humidity": 59,
                  "pressure": 1019.55,
                  "sea_level": 1019.55,
                  "temp": 13.04,
                  "temp_kf": 0,
                  "temp_max": 13.04,
                  "temp_min": 13.04,
                },
                "rain": Object {
                  "3h": 0.312,
                },
                "sys": Object {
                  "pod": "d",
                },
                "weather": Array [
                  Object {
                    "description": "light rain",
                    "icon": "10d",
                    "id": 500,
                    "main": "Rain",
                  },
                ],
                "wind": Object {
                  "deg": 335.292,
                  "speed": 4.91,
                },
              },
            ],
          }
        }
      />
    </ForecastList__ForecastRow>
    <ForecastList__ForecastRow
      key="Madrid-1"
    >
      <ForecastItem
        data={
          Object {
            "displayName": "Madrid",
            "list": Array [
              Object {
                "clouds": Object {
                  "all": 0,
                },
                "dt": 1556388000,
                "dt_txt": "2019-04-27 18:00:00",
                "main": Object {
                  "grnd_level": 937.7,
                  "humidity": 31,
                  "pressure": 1022.44,
                  "sea_level": 1022.44,
                  "temp": 20.17,
                  "temp_kf": -0.28,
                  "temp_max": 20.45,
                  "temp_min": 20.17,
                },
                "sys": Object {
                  "pod": "d",
                },
                "weather": Array [
                  Object {
                    "description": "clear sky",
                    "icon": "01d",
                    "id": 800,
                    "main": "Clear",
                  },
                ],
                "wind": Object {
                  "deg": 162.856,
                  "speed": 1.62,
                },
              },
              Object {
                "clouds": Object {
                  "all": 0,
                },
                "dt": 1556398800,
                "dt_txt": "2019-04-27 21:00:00",
                "main": Object {
                  "grnd_level": 939.05,
                  "humidity": 45,
                  "pressure": 1024.47,
                  "sea_level": 1024.47,
                  "temp": 15.44,
                  "temp_kf": -0.21,
                  "temp_max": 15.65,
                  "temp_min": 15.44,
                },
                "sys": Object {
                  "pod": "n",
                },
                "weather": Array [
                  Object {
                    "description": "clear sky",
                    "icon": "01n",
                    "id": 800,
                    "main": "Clear",
                  },
                ],
                "wind": Object {
                  "deg": 319.481,
                  "speed": 1.06,
                },
              },
              Object {
                "clouds": Object {
                  "all": 0,
                },
                "dt": 1556409600,
                "dt_txt": "2019-04-28 00:00:00",
                "main": Object {
                  "grnd_level": 939.1,
                  "humidity": 56,
                  "pressure": 1024.74,
                  "sea_level": 1024.74,
                  "temp": 13.95,
                  "temp_kf": -0.14,
                  "temp_max": 14.09,
                  "temp_min": 13.95,
                },
                "sys": Object {
                  "pod": "n",
                },
                "weather": Array [
                  Object {
                    "description": "clear sky",
                    "icon": "01n",
                    "id": 800,
                    "main": "Clear",
                  },
                ],
                "wind": Object {
                  "deg": 31.129,
                  "speed": 2.98,
                },
              },
              Object {
                "clouds": Object {
                  "all": 19,
                },
                "dt": 1556420400,
                "dt_txt": "2019-04-28 03:00:00",
                "main": Object {
                  "grnd_level": 938,
                  "humidity": 65,
                  "pressure": 1023.97,
                  "sea_level": 1023.97,
                  "temp": 12.41,
                  "temp_kf": -0.07,
                  "temp_max": 12.48,
                  "temp_min": 12.41,
                },
                "sys": Object {
                  "pod": "n",
                },
                "weather": Array [
                  Object {
                    "description": "few clouds",
                    "icon": "02n",
                    "id": 801,
                    "main": "Clouds",
                  },
                ],
                "wind": Object {
                  "deg": 32.563,
                  "speed": 2.74,
                },
              },
              Object {
                "clouds": Object {
                  "all": 10,
                },
                "dt": 1556431200,
                "dt_txt": "2019-04-28 06:00:00",
                "main": Object {
                  "grnd_level": 937.61,
                  "humidity": 64,
                  "pressure": 1023.83,
                  "sea_level": 1023.83,
                  "temp": 12.03,
                  "temp_kf": 0,
                  "temp_max": 12.03,
                  "temp_min": 12.03,
                },
                "sys": Object {
                  "pod": "d",
                },
                "weather": Array [
                  Object {
                    "description": "clear sky",
                    "icon": "01d",
                    "id": 800,
                    "main": "Clear",
                  },
                ],
                "wind": Object {
                  "deg": 38.885,
                  "speed": 2.58,
                },
              },
              Object {
                "clouds": Object {
                  "all": 2,
                },
                "dt": 1556442000,
                "dt_txt": "2019-04-28 09:00:00",
                "main": Object {
                  "grnd_level": 937.66,
                  "humidity": 47,
                  "pressure": 1022.6,
                  "sea_level": 1022.6,
                  "temp": 17.09,
                  "temp_kf": 0,
                  "temp_max": 17.09,
                  "temp_min": 17.09,
                },
                "sys": Object {
                  "pod": "d",
                },
                "weather": Array [
                  Object {
                    "description": "clear sky",
                    "icon": "01d",
                    "id": 800,
                    "main": "Clear",
                  },
                ],
                "wind": Object {
                  "deg": 79.555,
                  "speed": 2.82,
                },
              },
              Object {
                "clouds": Object {
                  "all": 4,
                },
                "dt": 1556452800,
                "dt_txt": "2019-04-28 12:00:00",
                "main": Object {
                  "grnd_level": 936.28,
                  "humidity": 34,
                  "pressure": 1020.42,
                  "sea_level": 1020.42,
                  "temp": 21.39,
                  "temp_kf": 0,
                  "temp_max": 21.39,
                  "temp_min": 21.39,
                },
                "sys": Object {
                  "pod": "d",
                },
                "weather": Array [
                  Object {
                    "description": "clear sky",
                    "icon": "01d",
                    "id": 800,
                    "main": "Clear",
                  },
                ],
                "wind": Object {
                  "deg": 104.116,
                  "speed": 2.1,
                },
              },
              Object {
                "clouds": Object {
                  "all": 17,
                },
                "dt": 1556463600,
                "dt_txt": "2019-04-28 15:00:00",
                "main": Object {
                  "grnd_level": 934.14,
                  "humidity": 28,
                  "pressure": 1017.9,
                  "sea_level": 1017.9,
                  "temp": 23.54,
                  "temp_kf": 0,
                  "temp_max": 23.54,
                  "temp_min": 23.54,
                },
                "sys": Object {
                  "pod": "d",
                },
                "weather": Array [
                  Object {
                    "description": "few clouds",
                    "icon": "02d",
                    "id": 801,
                    "main": "Clouds",
                  },
                ],
                "wind": Object {
                  "deg": 118.017,
                  "speed": 1.7,
                },
              },
            ],
          }
        }
      />
    </ForecastList__ForecastRow>
    <ForecastList__ForecastRow
      key="New York-2"
    >
      <ForecastItem
        data={
          Object {
            "displayName": "New York",
            "list": Array [
              Object {
                "clouds": Object {
                  "all": 42,
                },
                "dt": 1556388000,
                "dt_txt": "2019-04-27 18:00:00",
                "main": Object {
                  "grnd_level": 996.49,
                  "humidity": 32,
                  "pressure": 1003.42,
                  "sea_level": 1003.42,
                  "temp": 14.39,
                  "temp_kf": 1.54,
                  "temp_max": 14.39,
                  "temp_min": 12.85,
                },
                "sys": Object {
                  "pod": "d",
                },
                "weather": Array [
                  Object {
                    "description": "scattered clouds",
                    "icon": "03d",
                    "id": 802,
                    "main": "Clouds",
                  },
                ],
                "wind": Object {
                  "deg": 279.557,
                  "speed": 7.75,
                },
              },
              Object {
                "clouds": Object {
                  "all": 85,
                },
                "dt": 1556398800,
                "dt_txt": "2019-04-27 21:00:00",
                "main": Object {
                  "grnd_level": 998.5,
                  "humidity": 37,
                  "pressure": 1005.41,
                  "sea_level": 1005.41,
                  "temp": 14.21,
                  "temp_kf": 1.16,
                  "temp_max": 14.21,
                  "temp_min": 13.05,
                },
                "sys": Object {
                  "pod": "d",
                },
                "weather": Array [
                  Object {
                    "description": "overcast clouds",
                    "icon": "04d",
                    "id": 804,
                    "main": "Clouds",
                  },
                ],
                "wind": Object {
                  "deg": 291.28,
                  "speed": 6.35,
                },
              },
              Object {
                "clouds": Object {
                  "all": 72,
                },
                "dt": 1556409600,
                "dt_txt": "2019-04-28 00:00:00",
                "main": Object {
                  "grnd_level": 1001.79,
                  "humidity": 45,
                  "pressure": 1008.7,
                  "sea_level": 1008.7,
                  "temp": 12.53,
                  "temp_kf": 0.77,
                  "temp_max": 12.53,
                  "temp_min": 11.75,
                },
                "sys": Object {
                  "pod": "n",
                },
                "weather": Array [
                  Object {
                    "description": "broken clouds",
                    "icon": "04n",
                    "id": 803,
                    "main": "Clouds",
                  },
                ],
                "wind": Object {
                  "deg": 305.27,
                  "speed": 5.23,
                },
              },
              Object {
                "clouds": Object {
                  "all": 39,
                },
                "dt": 1556420400,
                "dt_txt": "2019-04-28 03:00:00",
                "main": Object {
                  "grnd_level": 1005.36,
                  "humidity": 51,
                  "pressure": 1012,
                  "sea_level": 1012,
                  "temp": 10.06,
                  "temp_kf": 0.39,
                  "temp_max": 10.06,
                  "temp_min": 9.68,
                },
                "sys": Object {
                  "pod": "n",
                },
                "weather": Array [
                  Object {
                    "description": "scattered clouds",
                    "icon": "03n",
                    "id": 802,
                    "main": "Clouds",
                  },
                ],
                "wind": Object {
                  "deg": 309.686,
                  "speed": 4.3,
                },
              },
              Object {
                "clouds": Object {
                  "all": 64,
                },
                "dt": 1556431200,
                "dt_txt": "2019-04-28 06:00:00",
                "main": Object {
                  "grnd_level": 1006.38,
                  "humidity": 54,
                  "pressure": 1013.28,
                  "sea_level": 1013.28,
                  "temp": 8.33,
                  "temp_kf": 0,
                  "temp_max": 8.33,
                  "temp_min": 8.33,
                },
                "sys": Object {
                  "pod": "n",
                },
                "weather": Array [
                  Object {
                    "description": "broken clouds",
                    "icon": "04n",
                    "id": 803,
                    "main": "Clouds",
                  },
                ],
                "wind": Object {
                  "deg": 300.309,
                  "speed": 3.71,
                },
              },
              Object {
                "clouds": Object {
                  "all": 99,
                },
                "dt": 1556442000,
                "dt_txt": "2019-04-28 09:00:00",
                "main": Object {
                  "grnd_level": 1005.82,
                  "humidity": 53,
                  "pressure": 1013.09,
                  "sea_level": 1013.09,
                  "temp": 7.99,
                  "temp_kf": 0,
                  "temp_max": 7.99,
                  "temp_min": 7.99,
                },
                "sys": Object {
                  "pod": "n",
                },
                "weather": Array [
                  Object {
                    "description": "overcast clouds",
                    "icon": "04n",
                    "id": 804,
                    "main": "Clouds",
                  },
                ],
                "wind": Object {
                  "deg": 304.504,
                  "speed": 1.31,
                },
              },
              Object {
                "clouds": Object {
                  "all": 83,
                },
                "dt": 1556452800,
                "dt_txt": "2019-04-28 12:00:00",
                "main": Object {
                  "grnd_level": 1006.59,
                  "humidity": 56,
                  "pressure": 1013.23,
                  "sea_level": 1013.23,
                  "temp": 8.19,
                  "temp_kf": 0,
                  "temp_max": 8.19,
                  "temp_min": 8.19,
                },
                "rain": Object {
                  "3h": 0.562,
                },
                "sys": Object {
                  "pod": "d",
                },
                "weather": Array [
                  Object {
                    "description": "light rain",
                    "icon": "10d",
                    "id": 500,
                    "main": "Rain",
                  },
                ],
                "wind": Object {
                  "deg": 348.919,
                  "speed": 1.92,
                },
              },
              Object {
                "clouds": Object {
                  "all": 100,
                },
                "dt": 1556463600,
                "dt_txt": "2019-04-28 15:00:00",
                "main": Object {
                  "grnd_level": 1005.57,
                  "humidity": 67,
                  "pressure": 1013.11,
                  "sea_level": 1013.11,
                  "temp": 7.34,
                  "temp_kf": 0,
                  "temp_max": 7.34,
                  "temp_min": 7.34,
                },
                "rain": Object {
                  "3h": 1.688,
                },
                "sys": Object {
                  "pod": "d",
                },
                "weather": Array [
                  Object {
                    "description": "light rain",
                    "icon": "10d",
                    "id": 500,
                    "main": "Rain",
                  },
                ],
                "wind": Object {
                  "deg": 75.964,
                  "speed": 2.57,
                },
              },
            ],
          }
        }
      />
    </ForecastList__ForecastRow>
    <ForecastList__ForecastRow>
      <td>
         
      </td>
    </ForecastList__ForecastRow>
  </tbody>
</ForecastList__ForecastListContainer>
`;
